Script Editor: be cleverer when trying to discover tools.jar
Chances are that we're running from within a fiji.git checkout, and then
$JAVA_HOME/../lib/tools.jar contains what we need for debugging.  No need
to load anything via web.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>